alignment fixes

--- a/src/app/_components/assets-list/assets-list.component.scss
+++ b/src/app/_components/assets-list/assets-list.component.scss
@@ -75,7 +75,7 @@
 }
 
 .asset-icon-container {
-  margin-right: 8px !important;
+  // margin-right: 8px !important;
 }
 
 .list-title {
