--- a/src/app/_components/header/header.component.scss
+++ b/src/app/_components/header/header.component.scss
@@ -13,7 +13,7 @@
     line-height: 16px;
     font-family: 'Roboto';
     text-transform: uppercase;
-    font-weight: 700;
+    font-weight: 800;
   }
 }
 
