--- a/src/styles.scss
+++ b/src/styles.scss
@@ -692,7 +692,7 @@ input[type=number] {
  */
 .asset-icon-container {
   width: 24px;
-  margin-right: 16px;
+  // margin-right: 16px;
 
   img {
     width: 100%;
